--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.top-section{
+  background-color: cornsilk;
+  padding-top: 10px;
+  padding-bottom: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+}
+.bottom-section{
+  margin-top: 35px;
+  display: flex;  
+  justify-content: space-around;
+  margin-left: 20px;
+  margin-rigt: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.shape > img{
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  margin-right: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.shape > h3{
+  font-size: 18px;
+  margin-right: 20px;
 }
+
+.shape{
+  display: flex;
+}
+
+.filter-section-left > form{
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.filter-section-right > form{
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+
